@@ -17,6 +17,7 @@
     <module>tutorial</module>
     <module>DocumentationExamples</module>
     <module>SignedMocking</module>
+    <module>hamcrestexample</module>
   </modules>   <dependencyManagement>
       <dependencies>
          <dependency>
